feat : gallery floating button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="image_4">Image 4</string>
     <string name="image_5">Image 5</string>
     <string name="image_6">Image 6</string>
+    <string name ="add_book">add archive</string>
 </resources>
