chore: 앱 이름 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">bookApp</string>
+    <string name="app_name">소북소북</string>
     <string name="default_profile_image">Default Profile Image</string>
     <string name="image_1">Image 1</string>
     <string name="image_2">Image 2</string>
